Services/monitoring/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.zlaya.tech`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: default-headers
          namespace: default
  tls: {}
